# jaclang

./: .flake8  Dockerfile  README.md  cli_plugin_spec.py  connect_expressions.dot  current_formatted.jac  del.jac  error.jac  guess_game3.jac  kk  kk.jac  main_cli_app.py  main_server.py  module_loader_sub_pod_v2.py  module_server_v2.py  mypy.ini  oo.jac  package-lock.json  pp.dot  pyproject.toml  pytest.ini  setup.py  startup.sh  test.ipynb  test.py  test_module.py  test_server_module.py  test_smart_import.py  testpass_count.jac  testpass_count_pavi.jac
.github/workflows/: release.yml  run_plugin_pytest.yml  run_plugin_tests.yml  run_pytest.yml  test_plugins.yml  test_streamlit_plugin.yml  vsce_release.yml
cliplugin/show_plugin/: cmd_plugin.py  setup.py
examples/: aa.jac  bb.jac
examples/AOTT/: Type.jac  code-constructs.md  function.jac  method.jac
examples/Tutorial/: README.md  query_engine_1.jac
examples/agents/: extra.jac  main.jac
examples/city_traffic/: README.md
examples/coding_with_llm/: article.md  chain_of_thought_lmql.jac  cot_2_lmql.jac  cot_2_lmql.md  fs_translation_lmql.jac  fs_translation_lmql.md  joke_lmql.jac  judge_sglang.jac  judge_sglang.md  meta_lmql.jac  meta_lmql.md  qa_lmql.jac  qa_lmql.md  relationship_scallop.jac  relationship_scallop.md  temp.ipynb  template_lmql.jac  template_lmql.md  (+1 more)
jaclang/: __init__.py  settings.py
jaclang_fastapi/: __init__.py  setup.py
jaclang_smartimport/: README.md  setup.py
jaclang_smartimporter/: jaclang_smartimport.py
show/: setup.py
show_plugin/: setup.py
tests/: main.jac  main.py
(+441 files in other folders)
