[project]
name = "jaclang"
version = "0.6.0"
description = "Jaclang is a unique and powerful programming language that runs on top of Python, offering an unprecedented level of intelligence and intuitive understanding."
authors = [{name = "Jason Mars", email = "jason@jaseci.org"}]
license = {text = "MIT"}
keywords = ["jaclang", "programming-language", "machine-learning", "artificial-intelligence"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]
dependencies = []
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Repository = "https://github.com/Jaseci-Labs/jaclang"
Homepage = "https://jac-lang.org"
Documentation = "https://jac-lang.org/learn"

[project.scripts]
jac = "jaclang.cli.cli:start_cli"

[tool.setuptools]
packages = ['jaclang']
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.lark", "*.ini"]

[build-system]
requires = ["setuptools>=61.2.0"]
build-backend = "setuptools.build_meta"